# controlP

./: .gitignore  README.md  buildozer.spec  client.py  genindex.html  index.html  objects.inv  protocol.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: sphinx-pages.yml
_sources/: protocol.rst.txt
controlP/: application.py  client.py  coremenu.py  coremodel.py  corepower.py  coresong.py  coresource.py
controlP/pioneer/: api.py
controlP/ui/: app.css  coversong.ui  headerbar.ui  menulist.ui  picturedrow.ui  player.ui  power.ui  source.ui  window.ui
controlP/widget/: coversong.py  headerbar.py  menu.py  menulist.py  picturedrow.py  player.py  power.py  source.py  utils.py  window.py
docs/source/: conf.py  development.rst  index.rst  protocol.rst
docs/source/_templates/: lang.html
pioneer/: __init__.py  api.py
signal/: __init__.py  ampli.py  interface.py  player.py
src/: main.py
src/controlp/: __main__.py  app.py  controlp.ini
src/controlp/controllers/: __init__.py  amplifier.py  bottom.py  cd_player.py  explore.py  home.py  input.py  play.py  top.py
src/controlp/models/: __init__.py  amplifier.py  bottom.py  cd_player.py  explore.py  home.py  input.py  play.py  top.py  utils.py
src/controlp/pioneer/: __init__.py  api.py  upnp.py
src/controlp/views/: __init__.py  bottom.kv  bottom.py  top.kv  top.py
src/controlp/views/explore/: explore.kv  explore.py  menu.kv  menu.py
src/controlp/views/home/: home.kv  home.py
widget/: ampli.py  headerbar.py  menu.py  network_player.py  source.py  utils.py  window.py
(+20 files in other folders)
